import { describe, test, expect } from '@rstest/core';
import { noFormat, RuleTester } from '@typescript-eslint/rule-tester';
import { getFixturesRootDir } from '../RuleTester.ts';

const rootPath = getFixturesRootDir();
const ruleTester = new RuleTester({
  languageOptions: {
    parserOptions: {
      project: './tsconfig.json',
      tsconfigRootDir: rootPath,
    },
  },
});

describe('no-non-null-asserted-optional-chain', () => {
  test('rule tests', () => {
    ruleTester.run('no-non-null-asserted-optional-chain', {
      valid: [
        'foo.bar!;',
        'foo.bar!.baz;',
        'foo.bar!.baz();',
        'foo.bar()!;',
        'foo.bar()!();',
        'foo.bar()!.baz;',
        'foo?.bar;',
        'foo?.bar();',
        '(foo?.bar).baz!;',
        '(foo?.bar()).baz!;',
        'foo?.bar!.baz;',
        'foo?.bar!();',
        "foo?.['bar']!.baz;",
      ],
      invalid: [
        {
          code: 'foo?.bar!;',
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: 'foo?.bar;',
                },
              ],
            },
          ],
        },
        {
          code: "foo?.['bar']!;",
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: "foo?.['bar'];",
                },
              ],
            },
          ],
        },
        {
          code: 'foo?.bar()!;',
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: 'foo?.bar();',
                },
              ],
            },
          ],
        },
        {
          code: 'foo.bar?.()!;',
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: 'foo.bar?.();',
                },
              ],
            },
          ],
        },
        {
          code: noFormat`(foo?.bar)!.baz`,
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: `(foo?.bar).baz`,
                },
              ],
            },
          ],
        },
        {
          code: noFormat`(foo?.bar)!().baz`,
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: `(foo?.bar)().baz`,
                },
              ],
            },
          ],
        },
        {
          code: noFormat`(foo?.bar)!`,
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: `(foo?.bar)`,
                },
              ],
            },
          ],
        },
        {
          code: noFormat`(foo?.bar)!()`,
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: `(foo?.bar)()`,
                },
              ],
            },
          ],
        },
        {
          code: noFormat`(foo?.bar!)`,
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: `(foo?.bar)`,
                },
              ],
            },
          ],
        },
        {
          code: noFormat`(foo?.bar!)()`,
          errors: [
            {
              messageId: 'noNonNullOptionalChain',
              suggestions: [
                {
                  messageId: 'suggestRemovingNonNull',
                  output: `(foo?.bar)()`,
                },
              ],
            },
          ],
        },
      ],
    });
  });
});
